feat: add Cloud Notes product card to index.html

--- a/index.html
+++ b/index.html
@@ -316,6 +316,22 @@
                 <p>Explore our published applications available on Google Play Store</p>
             </div>
             <div class="products-grid">
+                <!-- Cloud Notes Card -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/cloudnotes.png" alt="Cloud Notes">
+                    </div>
+                    <div class="product-content">
+                        <h3>Cloud Notes</h3>
+                        <p>Sync your notes across all devices. Cloud Notes is a modern note-taking web app that lets you
+                            create, edit, and access your notes from anywhere—phone, tablet, or desktop.</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.qayham.cloudnotes" target="_blank"
+                            rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Get on Play Store
+                        </a>
+                    </div>
+                </div>
+
                 <!-- Compound Calculator Card -->
                 <div class="product-card">
                     <div class="product-image">
