feat: add WhatsApp contact button and corresponding styles to index.html and privacy.html

--- a/index.html
+++ b/index.html
@@ -536,7 +536,11 @@
         </div>
     </footer>
 
-    <!-- Back to top button -->
+    <!-- WhatsApp contact button -->
+    <a href="https://wa.me/9682318133" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <!-- Back to top button -->
     <div class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
