--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,7 @@
     <title>Privacy Policy - QAYHAM</title>
     <meta name="description"
         content="QAYHAM's Privacy Policy outlining our data practices and commitment to your privacy." />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
     <style>
         /* Privacy Policy Styles */
@@ -193,6 +194,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- WhatsApp contact button -->
+    <a href="https://wa.me/9682318133" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
     <!-- Back to top button -->
     <div class="back-to-top" id="backToTop">
