Update version number to 1.0.0 build 108 in version.json

--- a/cloudnotes/index.html
+++ b/cloudnotes/index.html
@@ -33,10 +33,13 @@
 
   <title>Cloud Notes</title>
   <link rel="manifest" href="manifest.json">
+  <!-- Cropper.js for image_cropper on web -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1627683120";
+    var serviceWorkerVersion = "2685425962";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
